--- a/instat/My Project/Resources.sw-KE.resx
+++ b/instat/My Project/Resources.sw-KE.resx
@@ -93,4 +93,115 @@
   <data name="Window" xml:space="preserve">
     <value>Dirisha</value>
   </data>
+  <data name="Exit_" xml:space="preserve">
+    <value>Toka:</value>
+  </data>
+  <data name="Clear" xml:space="preserve">
+    <value>Ondoa</value>
+  </data>
+  <data name="Copy" xml:space="preserve">
+    <value>Nakili</value>
+  </data>
+  <data name="Cut" xml:space="preserve">
+    <value>Kata</value>
+  </data>
+  <data name="Find" xml:space="preserve">
+    <value>Tafuta</value>
+  </data>
+  <data name="Paste" xml:space="preserve">
+    <value>Bandika</value>
+  </data>
+  <data name="Replace" xml:space="preserve">
+    <value>Badilisha</value>
+  </data>
+  <data name="Select_All" xml:space="preserve">
+    <value>Teua Yote</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>Lugha</value>
+  </data>
+  <data name="Open" xml:space="preserve">
+    <value>Fungua</value>
+  </data>
+  <data name="Output" xml:space="preserve">
+    <value>Towe</value>
+  </data>
+  <data name="Selection" xml:space="preserve">
+    <value>Uteuzi</value>
+  </data>
+  <data name="Calculations" xml:space="preserve">
+    <value>Ukokotozi</value>
+  </data>
+  <data name="Column_Properties" xml:space="preserve">
+    <value>Sifa za Safuwima...</value>
+  </data>
+  <data name="Data" xml:space="preserve">
+    <value>Data</value>
+  </data>
+  <data name="Display" xml:space="preserve">
+    <value>Onyesha</value>
+  </data>
+  <data name="English" xml:space="preserve">
+    <value>Kiingereza</value>
+  </data>
+  <data name="Enter" xml:space="preserve">
+    <value>Enter</value>
+  </data>
+  <data name="French" xml:space="preserve">
+    <value>Kifaransa</value>
+  </data>
+  <data name="Group" xml:space="preserve">
+    <value>Kikundi</value>
+  </data>
+  <data name="Histogram" xml:space="preserve">
+    <value>Histogramu</value>
+  </data>
+  <data name="Plot" xml:space="preserve">
+    <value>Ploti</value>
+  </data>
+  <data name="Reshape" xml:space="preserve">
+    <value>Unda upya</value>
+  </data>
+  <data name="Sample_Size" xml:space="preserve">
+    <value>Ukubwa sampuli</value>
+  </data>
+  <data name="Summary" xml:space="preserve">
+    <value>Muhtasari</value>
+  </data>
+  <data name="Tables" xml:space="preserve">
+    <value>Majedwali</value>
+  </data>
+  <data name="Expand" xml:space="preserve">
+    <value>Finyuza</value>
+  </data>
+  <data name="Select_" xml:space="preserve">
+    <value>Teua</value>
+  </data>
+  <data name="Sort" xml:space="preserve">
+    <value>angua</value>
+  </data>
+  <data name="Stack" xml:space="preserve">
+    <value>Mpororo</value>
+  </data>
+  <data name="Transform" xml:space="preserve">
+    <value>Geuhamisha...</value>
+  </data>
+  <data name="Clear1" xml:space="preserve">
+    <value>Ondoa uteuzi	Del</value>
+  </data>
+  <data name="Find1" xml:space="preserve">
+    <value>Tafuta...	Ctrl+F</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>chaguo</value>
+  </data>
+  <data name="Paste1" xml:space="preserve">
+    <value>Bandika	Ctrl+V</value>
+  </data>
+  <data name="Recall" xml:space="preserve">
+    <value>Itisha</value>
+  </data>
+  <data name="Replace1" xml:space="preserve">
+    <value>Badilisha...	Ctrl+H</value>
+  </data>
 </root>
