--- a/instat/MultilingualResources/instat.sw-KE.xlf
+++ b/instat/MultilingualResources/instat.sw-KE.xlf
@@ -563,6 +563,14 @@
           <source>View/Edit Text</source>
           <target state="new">View/Edit Text</target>
         </trans-unit>
+        <trans-unit id="Data_View" translate="yes" xml:space="preserve">
+          <source>Data View</source>
+          <target state="new">Data View</target>
+        </trans-unit>
+        <trans-unit id="Output_Window" translate="yes" xml:space="preserve">
+          <source>Output Window</source>
+          <target state="new">Output Window</target>
+        </trans-unit>
       </group>
     </body>
   </file>
@@ -817,6 +825,14 @@
           <target state="needs-review-translation">25</target>
         </trans-unit>
       </group>
+    </body>
+  </file>
+  <file datatype="xml" source-language="en-US" target-language="sw-KE" original="INSTAT/DLGSTARTOFRAINS.RESX" tool-id="MultilingualAppToolkit" product-name="n/a" product-version="n/a" build-num="n/a">
+    <header>
+      <tool tool-id="MultilingualAppToolkit" tool-name="Multilingual App Toolkit" tool-version="4.0.1466.0" tool-company="Microsoft" />
+    </header>
+    <body>
+      <group id="INSTAT/DLGSTARTOFRAINS.RESX" datatype="resx" />
     </body>
   </file>
 </xliff>
