--- a/instat/My Project/Resources.fr-FR.resx
+++ b/instat/My Project/Resources.fr-FR.resx
@@ -381,4 +381,46 @@
   <data name="View_Edit_Text" xml:space="preserve">
     <value>Afficher/modifier texte</value>
   </data>
+  <data name="Data_View" xml:space="preserve">
+    <value>Affichage des données</value>
+  </data>
+  <data name="Output_Window" xml:space="preserve">
+    <value>Fenêtre Sortie</value>
+  </data>
+  <data name="Dry_Spell" xml:space="preserve">
+    <value>Période de sécheresse</value>
+  </data>
+  <data name="Earliest_day" xml:space="preserve">
+    <value>Premier jour</value>
+  </data>
+  <data name="Length_of_Dry_Spell" xml:space="preserve">
+    <value>Longueur de la période de sécheresse</value>
+  </data>
+  <data name="Not_Yet_Implemented" xml:space="preserve">
+    <value>Pas encore mis en œuvre</value>
+  </data>
+  <data name="Number_of_Rain_Days" xml:space="preserve">
+    <value>Nombre de jours de pluie</value>
+  </data>
+  <data name="Threashold" xml:space="preserve">
+    <value>Threashold</value>
+  </data>
+  <data name="Total_Rain" xml:space="preserve">
+    <value>Pluie totale</value>
+  </data>
+  <data name="Within" xml:space="preserve">
+    <value>Au sein de</value>
+  </data>
+  <data name="Extremes" xml:space="preserve">
+    <value>Extrêmes</value>
+  </data>
+  <data name="Spells" xml:space="preserve">
+    <value>Sorts</value>
+  </data>
+  <data name="Start_of_the_Rains" xml:space="preserve">
+    <value>Début de la saison des pluies</value>
+  </data>
+  <data name="Water_Balance" xml:space="preserve">
+    <value>Bilan hydrique</value>
+  </data>
 </root>
